--- a/public/styles/styles_chat.css
+++ b/public/styles/styles_chat.css
@@ -1,18 +1,19 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
 }
 
 body {
     margin-top: 1em;
+    overflow-y: scroll;
     font-size: 20px;
     color: #333333;
-    height: 100vh;
-    overflow: hidden;
+    height: auto;
     font-family: 'Montserrat', sans-serif;
     background: linear-gradient(to right, rgba(60, 102, 97, 1) 0%, rgba(108, 137, 100, 1) 76%, rgba(156, 141, 94, 1) 100%);
-    box-shadow: inset 0px -20px 20px -14px #0000006e;
+    /*box-shadow: inset 0px -20px 20px -14px #0000006e;*/
 }
 
 .wrapper {
@@ -93,7 +94,7 @@ users__button{
     min-width: 475px;
     background-color: #eee;
     border: 1px solid #252e3e;
-    height: 75vh;
+    height: 600px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
@@ -101,21 +102,59 @@ users__button{
 
 .chat__content {
     flex: 1;
-    height: 70vh;
     display: flex;
     flex-direction: column;
-    padding: 10px 30px;
+    padding: 10px 5px;
     overflow-y: auto;
+    box-shadow: inset 0px -2px 12px -8px black;
 }
 
-.outgoing {
+.outgoing{
+    margin: 5px;
     padding: 5px;
-    text-align: right;
+    word-break: break-all;
+    background-color: #a7dcff;
+    align-self: flex-end;
+    width: fit-content;
+    max-width: 75%;
+    border-radius: 10px 10px 4px 10px;
+    position: relative;
+    z-index: 1;
 }
-
+.outgoing:after{
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    z-index: -1;
+    left: auto;
+    right: -10px;
+    bottom: -10px;
+    border: 11px solid;
+    border-color: #a7dcff #e2000000 #5a5a5a00 #ffffff00;
+}
 .incoming {
+    margin: 5px;
     padding: 5px;
-    text-align: left;
+    word-break: break-all;
+    background-color: #ccd0d4;
+    align-self: flex-start;
+    width: fit-content;
+    max-width: 75%;
+    position: relative;
+    border-radius: 10px 10px 10px 4px;
+    z-index: 1;
+}
+.incoming:after{
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    z-index: -1;
+    left: -10px;
+    bottom: -10px;
+    border: 11px solid;
+    border-color: #ccd0d4 #e2000000 #5a5a5a00 #ffffff00;
 }
 .system-message {
     text-align: center;
@@ -127,6 +166,7 @@ users__button{
 .chat__footer {
     display: flex;
     height: 2.5em;
+    box-shadow: inset 0px -1px 12px -8px black;
     align-items: center;
 }
 
@@ -212,12 +252,12 @@ users__button{
     background-color: #eee;
 }
 
-td, th {
-    padding: 0.5em;
-}
-
 .table__body-centred {
     padding-left: 35px;
+}
+
+td, th {
+    padding: 0.5em;
 }
 
 .users-chat {
